Fixes for dark mode and some other changes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,4 @@
 :root {
-    --radius: 50px;
     --sans: Cambria;
     text-align: center;
     font-size: medium;
@@ -17,7 +16,8 @@
     --element1: #eeeeee;
 
     svg:not(.fa-sun) {
-        filter: invert(100%)
+        filter: invert(100%);
+        transition: filter 0.3s ease;
     }
 }
 
@@ -25,6 +25,7 @@ html {
     font-family: var(--sans);
     line-height: 1.5;
     background-color: var(--surface1, #e6e6e6);
+    transition: background-color 0.3s ease;
 }
 
 #toggleMode {
@@ -35,46 +36,75 @@ html {
     position: absolute;
     top: 1em;
     right: 1em;
-    padding: 0.25em;
     width: 2em;
     height: 2em;
     cursor: pointer;
-    display: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform 0.2s ease;
+    z-index: 1000;
+}
+
+#toggleLabel:hover {
+    transform: scale(1.1);
 }
 
 .fa-sun {
-    fill: var(--tertiary, #ecd885);
-    stroke: var(--tertiary, #ecd885);
+    fill: var(--tertiary, #555353);
+    stroke: var(--tertiary, #555353);
     stroke-width: 2;
     stroke-linecap: round;
     stroke-linejoin: round;
-    position: relative;
     font-size: 1.5em;
     display: inline;
+    transition: opacity 0.3s ease, fill 0.3s ease, stroke 0.3s ease;
+    pointer-events: none;
 }
 
 .fa-moon {
-    fill: var(--tertiary, #555353);
-    position: relative;
+    fill: var(--tertiary, #ecd885);
     font-size: 1.5em;
     display: none;
+    transition: opacity 0.3s ease, fill 0.3s ease;
+    pointer-events: none;
 }
 
-a:link,
-a:visited,
-a:hover,
-a:active {
+a {
     color: var(--element1, #111111);
+    transition: color 0.3s ease;
+    display: inline-block;
+}
+
+a svg {
+    display: block;
+    width: 30px;
+    height: 30px;
+}
+
+section a:not(:last-child) {
+    margin-right: 0.5em;
+}
+
+a:focus,
+#toggleLabel:focus-within {
+    outline: 2px solid var(--tertiary, #555353);
+    outline-offset: 4px;
+    border-radius: 4px;
 }
 
 main {
     top: 5%;
     position: fixed;
     width: 100%;
+    height: 90%;
+    overflow-y: auto;
+    z-index: 1;
 }
 
 section {
     color: var(--element1, #111111);
+    transition: color 0.3s ease;
 }
 
 main h1 {
@@ -83,25 +113,32 @@ main h1 {
     display: inline-block;
 }
 
-main section h1 picture img {
+main h1 img {
     border-radius: 50%;
 }
 
 footer {
     position: fixed;
-    bottom: 0em;
+    bottom: 0;
     width: 100%;
     color: var(--element1, #111111);
     background-color: var(--surface1, #e6e6e6);
     font-size: xx-small;
     line-height: 1;
+    transition: color 0.3s ease, background-color 0.3s ease;
+    z-index: 10;
+}
+
+footer a:not(:last-child) {
+    margin-right: 0.5em;
 }
 
 /* Small Mobile devices - Mi A2 */
-@media all and (max-width: 319px) and (min-width: 0px) {
-    /* Toggle button */
+@media (max-width: 319px) {
     #toggleLabel {
         font-size: xx-small;
+        width: 1.8em;
+        height: 1.8em;
     }
 
     svg {
@@ -113,7 +150,7 @@ footer {
     section div {
         font-size: smaller;
         line-height: 1.25em;
-        margin-right: 1em;
+        margin-inline: 1em;
     }
 
     main h1 {
@@ -126,16 +163,20 @@ footer {
 }
 
 /* Mobile devices - iPhone 14 Pro Max*/
-@media all and (max-width: 480px) and (min-width: 320px) {
-    /* Toggle button */
+@media (max-width: 480px) and (min-width: 320px) {
+    #toggleLabel {
+        width: 2em;
+        height: 2em;
+    }
+
     svg {
         width: 26px;
+        height: 26px;
     }
 
     p,
     section div {
-        margin-left: 1em;
-        margin-right: 1em;
+        margin-inline: 1em;
         line-height: 1.25em;
     }
 
@@ -145,19 +186,17 @@ footer {
 }
 
 /* Small screen laptops / iPad Air / iPad Pro / iPads Mini, Tablets */
-@media all and (max-width: 1199px) and (min-width: 481px) {
+@media (max-width: 1199px) and (min-width: 481px) {
     p,
     section div {
-        margin-left: 5em;
-        margin-right: 5em;
+        margin-inline: 5em;
     }
 }
 
 /* Big laptops / Monitors / Others */
-@media all and (min-width: 1200px) {
+@media (min-width: 1200px) {
     p,
     section div {
-        margin-left: 10em;
-        margin-right: 10em;
+        margin-inline: 10em;
     }
 }
